@@ -1,5 +1,8 @@
 2012-01-16 Pierre Wieser <pwieser@trychlos.org>
 
+	* docs/nact/C/nact-conditions.xml: Embeds literal values between
+	<literal>..</literal> tags.
+
 	* docs/reference/nautilus-actions-sections.txt:
 	Report here the new GType macro names.
 
